# idk

Lax_Friedrichs_method/: CMakeLists.txt  IO_Functions.cpp  IO_Functions.h  calculation_info.cpp  calculation_info.hpp  config.json  config_2d.json  data.cpp  data.h  data_1d.cpp  data_1d.h  data_2d.cpp  data_2d.h  data_2d.inl  data_2d_writer.cpp  data_2d_writer.h  data_2d_writer.inl  data_nodes.h  data_nodes.hpp  error_norms.json  exact_solution.cpp  exact_solution.h  exact_solution_wrong.cpp  main.cpp  main_1d.cpp  main_2d.cpp  methods_axisymm.cpp  methods_cartesian.cpp  riemann_v2.c  run.py  statistis_methods.cpp  utils.hpp
Lax_Friedrichs_method/results/: error_norms.json  error_norms_auto.xlsx  error_norms_first_version.xlsx  error_norms_raw.txt
Lax_Friedrichs_method/results/error norms/: lax_friedrichs.xlsx  lax_friedrichs_shock_wave.xlsx  lax_friedrichs_sod.xlsx  mac_cormack+davis.xlsx  mac_cormack+davis_shock_wave.xlsx  mac_cormack+davis_sod.xlsx  mac_cormack_shock_wave.xlsx
Lax_Friedrichs_method/results/plots/LaxFriedrichs/courant0.5/100000nodes/: out_lax_friedrichs.txt
Lax_Friedrichs_method/results/plots/LaxFriedrichs/courant1.0/100 узлов/: out_lax_friedrichs.txt
Lax_Friedrichs_method/results/plots/LaxFriedrichs/courant1.0/1000 узлов/: out_lax_friedrichs.txt
Lax_Friedrichs_method/results/plots/LaxFriedrichs/courant1.0/10000 узлов/: out_lax_friedrichs.txt
Lax_Friedrichs_method/results/plots/LaxFriedrichs/courant1.0/100000 узлов/: out_lax_friedrichs.txt
Lax_Friedrichs_method/results/plots/LaxFriedrichs/shock_wave_courant0.5/: out_lax_friedrichs.txt
Lax_Friedrichs_method/results/plots/McCormack/: out_mac_cormack.txt
Lax_Friedrichs_method/results/plots/McCormack+Davis/courant0.5_shock_wave/: out_mac_cormack+davis.txt
Lax_Friedrichs_method/results/plots/McCormack+Davis/courant1.0/100 узлов/: out_mac_cormack.txt
Lax_Friedrichs_method/results/plots/McCormack+Davis/courant1.0/1000 узлов/: out_mac_cormack.txt
Lax_Friedrichs_method/results/plots/McCormack+Davis/courant1.0/10000 узлов/: out_mac_cormack.txt
(+1 files in other folders)
